@@ -2,6 +2,6 @@ DIST freenet-sources-v1060.tar.bz2 19097516 RMD160 8e67d3a04d491a97b2104932fc3cb
 DIST freenet07.tar.gz 383366 RMD160 d6f7baee05c1fe2d713fa345fae10bc25287b61e SHA1 8e9ddde6420f5cc24824467747b7a3bcbc21b15c SHA256 aae56bd0d2ed7d80217b1eccab1cf3a946a517df83fc6c1a9de7b95fd82724aa
 DIST update.sh 3115 RMD160 e65f151e06b5a6425dcb59f03b4874ec1e8b5047 SHA1 e024bcfc443982fcc3d888088ef427943fa62f71 SHA256 df80518672316ae8d330e08ef50f170eabacd9003eeac975a400523d0f61922c
 DIST wrapper.conf 1706 RMD160 413f4fec1f60b6d4651f1ffd945e6d9ec2275e39 SHA1 8ec5648d5677325a867118e687f1e05cfe4a417a SHA256 f56a8e897297107c3ea2c95da5f321556e1ac82e87d81f339610f8bb27ecd88b
-EBUILD freenet-0.7.1060.ebuild 2344 RMD160 51b268634e78d5fca2bb8371654a08002a80b822 SHA1 f58ac737de4f3233aca73ec131e347055c2ecba0 SHA256 80cd0e3fb22db6fc69fb2318248f13209ce2d1946799dc6dfde534469ca3bd49
-MISC ChangeLog 546 RMD160 e4fe2cb98670361bcfd6d5b7c7549984b93dca83 SHA1 71c98e44641a351b471d19a951b352d0f9142b2a SHA256 3d097a7a8339dea021dd5658d6f93865ce942cb8757f9aa985d94bd81edcb39a
+EBUILD freenet-0.7.1060-r1.ebuild 2232 RMD160 0402bd98d48db7aa70e7a93efc66f58203be252b SHA1 8cc347b12d0b7c512b679a83ae8a3257bd10aa37 SHA256 2aaa745d6042675ceb66c27fac63d6b51310f54e94c4f3bb711f327a7ccfbbec
+MISC ChangeLog 679 RMD160 1ff008a844999044496b89db3b6c248dd58402c5 SHA1 46e4a0c88586fa407ab9150dcd8492f826a053c8 SHA256 68e6e7bc90632a5bb37197252fd11d2db4ce348817b9049e3e9db5640f503986
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
