@@ -17,7 +17,6 @@ LICENSE="GPL-2"
 SLOT="0"
 KEYWORDS="~x86"
 IUSE=""
-RESTRICT="userpriv mirror"
 
 DEPEND="!net-p2p/freenet-bin
 	dev-java/sun-jdk
@@ -25,20 +24,18 @@ DEPEND="!net-p2p/freenet-bin
 RDEPEND="virtual/jre"
 
 S="${WORKDIR}/${PN}"
+RESTRICT="userpriv mirror"
 
 QA_TEXTRELS="opt/freenet/lib/libwrapper-linux-x86-32.so"
 
 pkg_setup() {
-enewgroup freenet
-enewuser freenet -1 /bin/sh /opt/freenet freenet
+	enewgroup freenet
+	enewuser freenet -1 /bin/sh /opt/freenet freenet
 }
 
 src_unpack() {
 	unpack ${PN}07.tar.gz
 	cd "${S}"
-	rm bin/wrapper-macosx* bin/wrapper-linux-ppc-* lib/libwrapper-macosx*.* \
-	lib/libwrapper*ppc-*.so update stun mdns librarian bin/1run.sh bin/*jar \
-	welcome.html INSTALL README
 	unpack ${PN}-sources-v${MY_PV}.tar.bz2
 }
 
@@ -46,23 +43,30 @@ src_compile() {
 	cd contrib
 	mkdir -p bdb/examples
 	cd freenet_ext
-	ant||die "freenet-ext failed"
-	cd ../../${PN} && mkdir lib && cp ../contrib/freenet_ext/freenet-ext.jar lib/ && rm -R ../contrib
-	ant|| die "freenet-stable-latest failed"
-	cp lib/*.jar ../
-	cd .. && rm -R ${PN}
+	ant || die "freenet-ext failed"
+
+	cd "${S}"/freenet
+	mkdir -p lib
+	cp "${S}"/contrib/freenet_ext/freenet-ext.jar lib/
+	ant || die "freenet-stable-latest failed"
+
 	sed -i -e 's:./bin/wrapper:/opt/freenet/bin/wrapper:g' \
 	-e 's:./wrapper.conf:/opt/freenet/wrapper.conf:g' \
 	-e 's:PIDDIR=".":PIDDIR="/opt/freenet/":g' \
-	-e 's:#RUN_AS_USER=:RUN_AS_USER=freenet:g' run.sh
+	-e 's:#RUN_AS_USER=:RUN_AS_USER=freenet:g' "${S}"/run.sh
 }
 
 src_install() {
-	newinitd "${S}/run.sh" freenet1
+	newinitd "${S}/run.sh" freenet
 	rm "${S}"/run.sh
 	insinto /opt/freenet
-	doins -r bin freenet-cvs-snapshot.jar freenet-ext.jar lib license ${DISTDIR}/update.sh ${DISTDIR}/wrapper.conf
-	fperms 755 /opt/freenet/bin/wrapper-linux-x86-{32,64}
+	into /opt/freenet
+
+	dodoc license/README license/LICENSE.Mantissa license/LICENSE.Freenet
+	dobin bin/wrapper-linux-x86-{32,64}
+	dolib.so lib/libwrapper-linux-x86-{32,64}.so 
+	doins "${DISTDIR}"/update.sh "${DISTDIR}"/wrapper.conf freenet/lib/freenet-{cvs-snapshot,ext}.jar
+
 	dosym freenet-stable-latest.jar /opt/freenet/freenet.jar
 	fowners freenet:freenet /opt/freenet/ -R
 }
